--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+.holder {
+	heigth: 100%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.item {
+	background-color: red;
+	height: 100px;
+	width: 100px;	
+}
